fix(leaflet): wrong map controll z-index

--- a/src/app/pages/maps/leaflet/leaflet.component.scss
+++ b/src/app/pages/maps/leaflet/leaflet.component.scss
@@ -10,4 +10,8 @@
     width: 100%;
     height: nb-theme(card-height-large);
   }
+
+  /deep/ .leaflet-top {
+    z-index: 998;
+  }
 }
